@@ -54,6 +54,11 @@ Working version
   (Christiano Haesbaert, review by Guillaume Munch-Maccagnoni and
    Sébastien Hinderer)
 
+- #11881: Fix thread-unsafety of registration of operations for "custom"
+   values.
+  (Guillaume Munch-Maccagnoni, review by Gabriel Scherer and KC
+   Sivaramakrishnan)
+
 ### Type system:
 
 - #6941, #11187: prohibit using classes through recursive modules
